--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pg": "^8.11.2",
     "sequelize": "^6.32.1",
     "serve-favicon": "^2.4.5",
+    "stripe": "^17.5.0",
     "voucher-code-generator": "^1.1.1"
   },
   "engines": {
