--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
+    "dotenv": "^16.4.7",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-messages": "^1.0.1",
