--- a/.env
+++ b/.env
@@ -1,12 +1,5 @@
 APP_NAME=GachaX
-# MAIL_MAILER=smtp
-# MAIL_HOST=sv737.xbiz.ne.jp
-# MAIL_PORT=465
-# MAIL_USERNAME=ambrosia@xb404579.xbiz.jp
-# MAIL_PASSWORD=TryHyW5X7n_E-At
-# MAIL_ENCRYPTION=ssl
-# MAIL_FROM_ADDRESS=ambrosia@xb404579.xbiz.jp
-# MAIL_FROM_NAME="${APP_NAME}"
+FRONTEND_URL=https://gacha-241220-pgnu.vercel.app/
 MAIL_MAILER=smtp 
 MAIL_HOST=sv12431.xserver.jp
 MAIL_PORT=587
