--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sequelize": "^6.32.1",
     "serve-favicon": "^2.4.5",
     "stripe": "^17.5.0",
+    "typed-error": "^3.2.2",
     "voucher-code-generator": "^1.1.1"
   },
   "engines": {
