--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=GachaX
-FRONTEND_URL=https://gacha-241220-pgnu.vercel.app/
+FRONTEND_URL=https://gachax.co/
 MAIL_MAILER=smtp 
 MAIL_HOST=sv12431.xserver.jp
 MAIL_PORT=587
