--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ MAIL_PASSWORD=bwBtQ9tu2Mq-5v2
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="info@xs998400.xsrv.jp"
 MAIL_FROM_NAME="${APP_NAME}"
+
+TWILIO_ACCOUNT_SID=ACe3ba9075878948800c9e98e105319313
+TWILIO_AUTH_TOKEN=0840a77b66195d7403f7aa057492de3f
+TWILIO_VERIFY_SERVICE_SID=your_verify_service_sid
+
